# feature

./: .env  .gitignore  OPTIMIZATION_SUMMARY.md  feature.code-workspace  pyproject.toml  qwen35-9b-vllm.yaml  test_douluo.py  test_douluo_content.py  test_douluo_detection.py  test_entity_extractor.py  test_heading_detection.py  test_heading_patterns.py  test_outline_service.py  test_regex.py  test_txt_parser.py  test_upload.py
mineruData/西安蓝想BP1/西安蓝想BP1/: 西安蓝想BP1.md  (+1 more)
plane/FinalRAG——企业级RAG设计与实施指南/: FinalRAG——企业级RAG设计与实施指南.md
remote_source/: main.py
scripts/: __init__.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  routes.py
src/chunking/: __init__.py  text_chunker.py
src/core/: __init__.py  exceptions.py  models.py
src/embedding/: __init__.py  remote_embedder.py  text_embedder.py
src/graph/: __init__.py  concept_graph_builder.py  entity_extractor.py  lazy_entity_builder.py
src/parsers/: __init__.py  base.py  docling_parser.py  minereu_parser.py  txt_parser.py
src/query/: __init__.py  answer_synthesizer.py  budget_controller.py  coe_engine.py  degradation.py  graph_traversal.py  lazy_enhancer.py  pipeline.py  router.py  subgraph_cache.py
src/services/: __init__.py  community_summary_service.py  document_cache.py  document_service.py  image_service.py  outline_service.py  query_service.py  summary_service.py
src/storage/: __init__.py  nebula_client.py  vector_client.py
src/utils/: __init__.py  llm_client.py  logger.py  vision_client.py
tests/: __init__.py
tests/evaluation/: __init__.py
tests/unit/: __init__.py
(+5 files in other folders)
